--- a/index.html
+++ b/index.html
@@ -1,37 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-     <!-- Google Ads Conversion Tag -->
-    <script>
-      gtag('event', 'conversion', {
-          'send_to': 'AW-16552332074/IAg_CMbH6tkZEKqW4tQ9',
-          'value': 1.0,
-          'currency': 'BRL'
-      });
-    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pelle Medical Center</title>
+    <title>Redirecionamento para Grupo de WhatsApp</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="hero-section">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="text-box">
-                <header>
-                    <h1>Seja bem-vindo à Pelle Medical Center</h1>
-                    <h2>Clínica Pelle hoje é referência nacional em tratamentos clínicos avançados sem cortes</h2>
-                </header>
-                <div class="content">
-                    <!-- Número de telefone adicionado -->
-                    <p class="phone-number">(17)98174-1333</p>
-                    <button id="whatsapp-btn">Converse conosco</button>
-                </div>
+    <div class="container">
+        <div class="redirect-box">
+            <h1>Aguarde, você será redirecionado para o grupo de WhatsApp...</h1>
+            <div class="progress-container">
+                <div class="progress-bar" id="progressBar"></div>
             </div>
+            <p id="countdown">5 segundos restantes</p>
         </div>
     </div>
     <script src="script.js"></script>
